[project]
name = "omniroute-quota-checker"
version = "0.1.0"
description = "Inspect OmniRoute quota snapshots and recommend models with the most remaining quota."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2",
]

[project.scripts]
omni-quota = "omniroute_quota.cli:main"
omni-quota-mcp = "omniroute_quota.mcp_server:main"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omniroute_quota"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
